cloud-native-security-defense-in-depth/dev-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-isolation
  namespace: development
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environment: dev

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              environment: dev

    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
